--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,25 @@ after_success:
   - docker build -t sbollman011/multi-nginx ./nginx
   - docker build -t sbollman011/multi-server ./server
   - docker build -t sbollman011/multi-worker ./worker
+
   #Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
   #Take those images and push them to docker hub
   - docker push sbollman011/multi-client
   - docker push sbollman011/multi-nginx
   - docker push sbollman011/multi-server
   - docker push sbollman011/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-904952335648
+  bucket_path: docker-multi
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+    
